--- a/.github/workflows/formbricks-release.yml
+++ b/.github/workflows/formbricks-release.yml
@@ -2,14 +2,14 @@ name: Build, release & deploy Formbricks images
 
 on:
   workflow_dispatch:
-  push:
-    tags:
-      - "v*"
+    inputs:
+      version:
+        description: 'Version to release (ex: v1.0.1)'
+        required: true
 
 jobs:
   docker-build:
     name: Build & release stable docker image
-    if: startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/release-docker-github.yml
     secrets: inherit
 
